# Saad-Agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: command.rs  config.rs  error.rs  history.rs  main.rs  memory.rs  permission.rs  session.rs  stream_handler.rs  ui.rs
src/tool/: cmd.rs  fs.rs  mod.rs
