[package]
name = "Saad-Agent"
version = "0.3.0"
edition = "2021"
description = "AI 编程助手 - 基于 DeepSeek 的智能 Agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
rig = { version = "0.38.2", features = ["default", "derive", "image", "discord-bot"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
schemars = "1"
thiserror = "2"
encoding_rs = "0.8"
dotenvy = "0.15"

# ── 专业 CLI UI ──
console = "0.16"       # 终端样式/颜色/对齐
dialoguer = "0.12"     # 交互式选择器/确认框
indicatif = "0.18"     # 进度条/旋转动画
